--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gluten-free-menu",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://michalvoscek.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -11,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.2.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
@@ -24,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
