--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.2.0",
     "lodash": "^4.17.21",
+    "photoswipe": "^5.4.4",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
