--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.2.0",
+    "lightgallery": "^2.8.3",
     "lodash": "^4.17.21",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
